[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://UI/HeartUIFull.png" type="Texture" id=2]
[ext_resource path="res://UI/HeartUIEmpty.png" type="Texture" id=3]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PixelHearts" type="Control" parent="."]
margin_left = 7.92855
margin_top = 6.67997
margin_right = 65.9286
margin_bottom = 18.68
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HeartsEmpty" type="TextureRect" parent="PixelHearts"]
margin_right = 60.0
margin_bottom = 11.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartsFull" type="TextureRect" parent="PixelHearts"]
margin_right = 60.0
margin_bottom = 11.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}
